--- a/ocserv.conf
+++ b/ocserv.conf
@@ -12,8 +12,8 @@ isolate-workers = true
 #banner = "Welcome DOUB.IO"
 max-clients = 0
 max-same-clients = 1
-rx-data-per-sec = 10000000 #实现接收限速配置
-tx-data-per-sec = 10000000  #实现发送限速配置
+rx-data-per-sec = 10000000
+tx-data-per-sec = 10000000
 rate-limit-ms = 0
 server-stats-reset-time = 604800
 keepalive = 32400
