--- a/ocserv.conf
+++ b/ocserv.conf
@@ -12,8 +12,8 @@ isolate-workers = true
 #banner = "Welcome DOUB.IO"
 max-clients = 0
 max-same-clients = 1
-rx-data-per-sec = 1234567
-tx-data-per-sec = 1234567
+rx-data-per-sec = 234567
+tx-data-per-sec = 234567
 rate-limit-ms = 0
 server-stats-reset-time = 604800
 keepalive = 32400
