--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,8 +5,8 @@ udp-port = 3389
 run-as-user = nobody
 run-as-group = daemon
 socket-file = /var/run/ocserv-socket
-server-cert = /etc/ocserv/ssl/server-cert.pem
-server-key = /etc/ocserv/ssl/server-key.pem
+server-cert = /etc/ocserv/ssl/19710127.xyz.pem
+server-key = /etc/ocserv/ssl/19710127.xyz.key
 ca-cert = /etc/ocserv/ssl/ca-cert.pem
 isolate-workers = true
 #banner = "Welcome DOUB.IO"
