--- a/ocserv.conf
+++ b/ocserv.conf
@@ -7,7 +7,7 @@ run-as-group = daemon
 socket-file = /var/run/ocserv-socket
 server-cert = /etc/ocserv/ssl/19710127.xyz.pem
 server-key = /etc/ocserv/ssl/19710127.xyz.key
-#ca-cert = /etc/ocserv/ssl/ca-cert.pem
+ca-cert = /etc/ocserv/ssl/19710127.xyz.csr
 isolate-workers = true
 #banner = "Welcome DOUB.IO"
 max-clients = 0
