--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,9 +5,9 @@ udp-port = 3389
 run-as-user = nobody
 run-as-group = daemon
 socket-file = /var/run/ocserv-socket
-server-cert = /etc/ocserv/ssl/19710127.xyz.pem
-server-key = /etc/ocserv/ssl/19710127.xyz.key
-ca-cert = /etc/ocserv/ssl/19710127.xyz.csr
+server-cert = /etc/ocserv/ssl/server-cert.pem
+server-key = /etc/ocserv/ssl/server-key.pem
+ca-cert = /etc/ocserv/ssl/ca-cert.pem
 isolate-workers = true
 #banner = "Welcome DOUB.IO"
 max-clients = 0
