--- a/ocserv.conf
+++ b/ocserv.conf
@@ -37,7 +37,7 @@ pid-file = /var/run/ocserv.pid
 net-priority = 6
 device = vpns
 predictable-ips = true
-default-domain = example.com
+default-domain = any.19710127.xyz
 
 ipv4-network = 192.168.1.0
 ipv4-netmask = 255.255.255.0
