--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,13 +5,13 @@ udp-port = 3389
 run-as-user = nobody
 run-as-group = daemon
 socket-file = /var/run/ocserv-socket
-server-cert = /etc/ocserv/ssl/server-cert.pem   # 证书
-server-key = /etc/ocserv/ssl/server-key.pem    # 证书的key
+server-cert = /etc/ocserv/ssl/server-cert.pem
+server-key = /etc/ocserv/ssl/server-key.pem
 ca-cert = /etc/ocserv/ssl/ca-cert.pem
 isolate-workers = true
 # banner = "Welcome DOUB.IO"
-max-clients = 0   # 最大连接数
-max-same-clients = 1   # 相同用户最大连接设备
+max-clients = 0
+max-same-clients = 1
 rate-limit-ms = 0
 server-stats-reset-time = 604800
 keepalive = 32400
